# agent-scaffold

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  driver-isolation-reminder-scope-r1-reviewer-a.md  driver-isolation-reminder-scope-r1-reviewer-b.md  driver-isolation-reminder-scope-r1-triage.md  flake.nix  justfile  single-source-recommendation-rule-r1-reviewer-a.md  single-source-recommendation-rule-r1-reviewer-b.md  single-source-recommendation-rule-r1-triage.md  spec.md
.agents/: AGENTS.reference.md  LEDGER.template.md  checks.toml  principles.toml  workflow.toml
.agents/prompts/: clarifying-questions.md  implementer.md  open-questions-gate.md  orchestrator.md  planner.md  reviewer.md  triager.md
.agents/user-prompts/: compaction-prep.md  kickoff.md  resume.md
docs/metrics/: workflow.jsonl
docs/plans/: TEMPLATE.md  TEMPLATE.principles-note.md  (+18 more)
pack/: AGENTS.md  LEDGER.template.md  checks-guidance.md  checks.toml  instrument.md  isolation-guidance.md  pack.toml  plan-template._status-narrative.md  plan-template.documentation-protocol.md  plan-template.md  plan-template.motivations.md  plan-template.plan.toml  plan-template.success-criteria.md  principles.toml
src/: agents_md_drift.rs  checks.rs  findings_naming.rs  isolation_policy.rs  main.rs  manifest.rs  metrics.rs  next.rs  pack.rs  plan.rs  recommendation_rule.rs  tui.rs  workflow.rs  workflow_spec.rs
tests/: checks_staged_hook_env.rs  scaffold_precommit_hook.rs  validate_toml_primary_skips_markdown_plan.rs  validate_workflow_toml_source_needs_no_plan.rs
(+440 files in other folders)
