[package]
name = "agent-scaffold"
version = "0.0.0"
edition = "2021"
license = "BlueOak-1.0.0"
description = "Scaffold the agent workflow into a project."

[dependencies]
clap = { version = "4", features = ["derive"] }
include_dir = "0.7"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
