[package]
name = "agent-scaffold"
version = "0.0.1"
edition = "2021"
rust-version = "1.88"
license = "BlueOak-1.0.0"
description = "Scaffold the agent workflow into a project."
repository = "https://github.com/nothingnesses/agent-scaffold"
readme = "README.md"
keywords = ["agent", "workflow", "ai", "scaffold", "template"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
include_dir = "0.7"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
